# mintbase-creative-marketplace

./: IMPLEMENTATION_REPORT.md  MINTBASE_SPECIFIC_README.md  README.md  TECHNICAL_ARCHITECTURE.md  index.html  package.json  package.json.working  working-bitte-marketplace.html
docs/: COMPREHENSIVE_ANALYSIS_AND_IMPROVEMENT_PLAN.md
src/: App.tsx
src.backup/utils/: bitte-protocol-ai-enhanced-v2.ts
src/components/: AIFeaturesTest.tsx  BitteAIChatIntegration.tsx  FilecoinAIPanel.tsx  FractalRenderingTest.tsx  InteractiveEmotionalNFT.tsx  InteractiveNFTFilecoinTest.tsx  MarketplaceTestSummary.tsx  MyNearWalletConnectionTest.tsx  MyNearWalletTest.tsx  NEARAIPanel.tsx  NearFaucetIntegration.tsx  RealAIBiometricCapture.tsx  RealAIShaderGenerator.tsx  RealAudioReactiveFractalRenderer.tsx  RealAudioReactiveShaderRenderer.tsx  RealBiometricCapture.tsx  RealBitteMarketplace.tsx  SolanaWalletTest.tsx  SoulboundTokenTest.tsx  WorkingAIFeatures.tsx  WorkingFractalRenderer.tsx  WorkingWalletConnection.tsx
src/config/: mainnet-config.js
src/pages/: BitteMarketplace.tsx  ComprehensiveBitteMarketplace.tsx  EnhancedBitteMarketplace.tsx  IsolatedMarketplace.tsx  MarketplaceTest.tsx  NEARCreativeEngine.tsx  RealBitteMarketplace.tsx
src/services/: bitteService.test.ts  bitteService.ts  bitteWalletService.ts  enhancedMarketplaceService.ts  (+3 more)
src/solana-programs/programs/biometric-nft/: Cargo.toml
src/solana-programs/programs/biometric-nft/src/: lib.rs
src/solana-programs/programs/emotional-metadata/: Cargo.toml
src/solana-programs/programs/emotional-metadata/src/: lib.rs
(+27 files in other folders)
