[package]
name = "biometric-nft"
version = "0.1.0"
description = "Biometric NFT program with emotional metadata"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "biometric_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.0"